fixed select options

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </button>
       </div>      
     </section>
-    <section class="tracker-activity work">
+    <!-- <section class="tracker-activity work">
       <div class="activity-background">
         <img src="./images/icon-work.svg" alt="">
       </div>
@@ -48,7 +48,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">5hrs</h3>
+            <h3 class="activity-timeframe-current">5hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -75,7 +75,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">1hrs</h3>
+            <h3 class="activity-timeframe-current">1hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -102,7 +102,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">0hrs</h3>
+            <h3 class="activity-timeframe-current">0hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -129,7 +129,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">0hrs</h3>
+            <h3 class="activity-timeframe-current">0hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -156,7 +156,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">1hrs</h3>
+            <h3 class="activity-timeframe-current">1hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -183,7 +183,7 @@
         </header>
         <div class="activity-timeframes-wrapper">
           <div class="activity-timeframes">
-            <h3 class="activity-timeframe-now">0hrs</h3>
+            <h3 class="activity-timeframe-current">0hrs</h3>
           </div>
           <div class="activity-timeframe-previous">
             <p class="time-when">Lask week</p>
@@ -192,8 +192,9 @@
           </div>
           </div>
       </div>
-    </section>
+    </section> -->
   </section>  
+  
   <script src="app.js"></script>
 </body>
 </html>
