--- a/Task Tracking Dashboard/index.html
+++ b/Task Tracking Dashboard/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="./reset.css"> 
-  <title>Time tracking dashboard</title>  
+  <title> Time tracking dashboard</title>  
 </head>
 <body>
   <section class="activity-tracker">
@@ -17,21 +17,21 @@
           <p class="tracker-for">
             Report for:
           </p>
-          <h1 class="tracker-profile-name"> Jeremy Robson</h1>
+          <h1 class="tracker-profile-name">Jeremy Robson</h1>
         </div>
       </div>      
       <div class="tracker-menu-options">
-        <button class="tracker-option" data-option="daily" name="button" type=" button">
+        <button class="tracker-option" data-option="daily">
           Daily
         </button>
-        <button class="tracker-option" data-option="weekly" name="button" type=" button">
+        <button class="tracker-option" data-option="weekly">
           Weekly
-        </button><button class="tracker-option" data-option="monthly" name="button" type=" button">
+        </button><button class="tracker-option" data-option="monthly">
           Monthly
         </button>
       </div>      
     </section>
-    <!-- <section class="tracker-activity work">
+    <section class="tracker-activity work">
       <div class="activity-background">
         <img src="./images/icon-work.svg" alt="">
       </div>
@@ -57,12 +57,8 @@
           </div>
         </div>
       </div>
-    </section> -->
-    
-  </section>  
-  
+    </section>
+  </section>    
   <script src="app.js"></script>
 </body>
 </html>
-
-
