--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="tracker-for">
               Report for:
             </p>
-            <p class="tracker-profile-name">Jeremy Robson</p>
+            <h3 class="tracker-profile-name">Jeremy Robson</h3>
           </div>
         </div>      
         <div class="tracker-menu-options">
