--- a/index.html
+++ b/index.html
@@ -22,14 +22,9 @@
           </div>
         </div>      
         <div class="tracker-menu-options">
-          <button class="tracker-option" data-option="daily">
-            Daily
-          </button>
-          <button class="tracker-option" data-option="weekly">
-            Weekly
-          </button><button class="tracker-option" data-option="monthly">
-            Monthly
-          </button>
+          <a class="tracker-option" data-option="daily"> Daily</a>
+          <a class="tracker-option" data-option="weekly"> Weekly</a>
+          <a class="tracker-option" data-option="monthly">Monthly</a>
         </div>      
       </section>
       <section class="tracker-activity work">
@@ -41,11 +36,11 @@
             <h2 class="activity-name">
               Work
             </h2>
-            <button class="activity-options">
+            <a class="activity-options">
               <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" 
                 fill="#BBC0FF" fill-rule="evenodd"/></svg>
-            </button>
+            </a>
           </header>
           <div class="activity-timeframes-wrapper">
             <div class="activity-timeframes">
